# Image-proccess

./: .gitignore  README.md  docker-compose.yml
docker/initdb/: create_database.sql
image_app/: .env-example  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
image_app/app/api/: main.py
image_app/app/api/endpoints/: auth.py  images.py
image_app/app/core/: config.py  exceptions.py  logging.py  security.py
image_app/app/db/: database.py  models.py  redis_client.py
image_app/app/db/alembic/: env.py
image_app/app/db/alembic/versions/: 2024_11_03_0448-2da1ee1e8fa3_initial_migration.py  2024_11_05_2055-3e8e82ab2883_image_model_was_updated.py
image_app/app/kafka/: kafka_client.py
image_app/app/schemas/: auth.py  images.py
image_app/app/services/: file_services.py  image_services.py
image_app/app/services/use_cases/: change_file_name_use_case.py  file_delete_use_case.py  file_upload_use_case.py
image_app/tests/: conftest.py  test_api.py  test_file_services.py  test_image_services.py
image_app/tests/mock_data/: images.json
image_process_app/: .env-example  Dockerfile  common.py  image_handler.py  main.py  pyproject.toml  requirements.txt
